kubernetes/_base/observability/goldilocks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: goldilocks-ingress
  namespace: observability
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-dns
    traefik.ingress.kubernetes.io/service.serversscheme: http
    traefik.ingress.kubernetes.io/entrypoints: websecure
  labels:
    app: goldilocks
spec:
  rules:
    - host: goldilocks.sargeant.co
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: goldilocks-dashboard
                port:
                  number: 80
  tls:
    - hosts:
        - goldilocks.sargeant.co
      secretName: goldilocks-tls
